<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/layout_c">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/in_c"
            android:hint="@string/temp_in_c"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_short"
            android:id="@+id/hint_c"
            android:layout_alignRight="@+id/in_c"
            android:layout_alignEnd="@+id/in_c"
            android:textSize="@dimen/default_text_size"
            android:layout_alignBaseline="@+id/in_c"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_f"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_c">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/in_f"
            android:layout_centerHorizontal="true"
            android:hint="@string/temp_in_f"
            android:inputType="number|numberSigned|numberDecimal"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_short"
            android:id="@+id/hint_f"
            android:layout_alignRight="@+id/in_f"
            android:layout_alignEnd="@+id/in_f"
            android:textSize="@dimen/default_text_size"
            android:layout_alignBaseline="@+id/in_f"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_fahrenheit"
        android:id="@+id/button_to_f"
        android:layout_below="@+id/layout_f" />

</RelativeLayout>
